--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "dependencies": {
-    "animate.css": "^4.1.1"
-  }
+    "animate.css": "^4.1.1",
+    "nodemailer": "^6.9.13"
+  },
+  "name": "fedin_mail",
+  "description": "",
+  "version": "1.0.0",
+  "main": "script.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
